# DPFT

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  requirements.txt  setup.cfg
config/: kradar.json  kradar_camera_mono.json  kradar_radar.json  kradar_radar_bev.json  kradar_radar_front.json
docs/: INSTALL.md
scripts/: add_kradar_revision.py  explore.ipynb  explore.py  split_dataset.py
src/dprt/: evaluate.py  prepare.py  train.py
src/dprt/datasets/: __init__.py  loader.py
src/dprt/datasets/kradar/: dataset.py  processor.py
src/dprt/datasets/kradar/utils/: radar_info.py  split.py
src/dprt/evaluation/: __init__.py  evaluator.py  metric.py
src/dprt/evaluation/exporters/: __init__.py  kradar.py
src/dprt/models/: __init__.py  dprt.py
src/dprt/models/backbones/: __init__.py  convnext.py  regnet.py  resnet.py  swin.py
src/dprt/models/embeddings/: __init__.py  sinusoidal.py
src/dprt/models/fusers/: __init__.py  mpfusion.py
src/dprt/models/heads/: __init__.py  detection.py
src/dprt/models/layers/: __init__.py  ms_deform_attn.py  unary.py
src/dprt/models/necks/: __init__.py  fpn.py
src/dprt/models/queries/: __init__.py  data_agnostic.py  learnable.py
src/dprt/models/utils/: transformations.py
src/dprt/training/: __init__.py  assigner.py  loss.py  optimizer.py  scheduler.py  trainer.py
src/dprt/utils/: bbox.py  config.py  data.py  geometry.py  iou.py  misc.py  project.py  visu.py
