[metadata]
name = dprt
version = 0.0.1
description = Dual Perspective Radar Transformer
author = Felix Fent
license = Apache-2.0
license_file = LICENSE
platforms = linux

[options]
packages = dprt
install_requires = 
	argparse
	deepspeed<=0.13.0
	matplotlib
	numpy<2.0.0
	open3d
	opencv-python
	scipy
	sympy
	tensorboard
	torch_tb_profiler
	tqdm
	pypcd @ https://github.com/DanielPollithy/pypcd/archive/master.zip
	pytorch3d @ https://github.com/facebookresearch/pytorch3d/archive/main.zip#egg=stable
package_dir = =src
python_requires = >=3.8

[flake8]
max-line-length = 99